--- a/tutorials/hooks/handleError/src/app.html
+++ b/tutorials/hooks/handleError/src/app.html
@@ -8,7 +8,7 @@
 		%sveltekit.head%
 
 		<!-- duplication with svelte.dev/static/shared.css needed, else styles aren't applied during local dev -->
-		<link rel="stylesheet" href="/index.css" />
+		<link rel="stylesheet" href="/shared.css" />
 	</head>
 	<body>
 		<div style="display: contents">%sveltekit.body%</div>
